displayed full nutrient data on page

--- a/NutriApp/Views/ProductInfo/Index.cshtml
+++ b/NutriApp/Views/ProductInfo/Index.cshtml
@@ -29,13 +29,35 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-auto"></div>
+  <div class="col-md-auto" id="productContainer">
+      <table id="productInfoTable" border="0">
+          <thead>
+              <tr>
+                <th class="empty_th_space"></th>
+                <th class="weight_th_info"></th>
+                <th class="percentDaily_th">Percent of daily recommended intake </th>
+              </tr>
+          </thead>
+          <tbody id="table_body">
+          </tbody>
+      </table>
+
+  </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
 <script type="text/javascript">
 
-var assetStatusEnum = @(Html.EnumToString<Units>())
+function getUnit(id) {
+    for (var i in assetStatusEnum) {
+        if (id == assetStatusEnum[i]) {     
+            return i;
+        }
+    }
+}
+
+var assetStatusEnum = @(Html.EnumToString<Units>());
+    console.log(assetStatusEnum);
 
 $(".selectionItems").click(function() {
     CallController((this));
@@ -46,17 +68,27 @@ function CallController(el) {
         type: "GET",
         url: "/ProductInfo/GetProductInformation",
         data: { "productId": el.dataset.productid },
+        dataType: "json",
         success: function(data) {
             console.log(data);
             var Nutritions = data.nutrition;
             console.log(Nutritions);
-            console.log(data.unit);
         },
         error: function(xhr, ajaxOptions, thrownError) {
             console.log("erro");
         },
         complete: function(data) {
-            console.log("succes");
+            var response = data.responseJSON;
+            $("#productContainer").prepend("<h1>" + response.name + "<h1>");
+            $(".weight_th_info").append(response.amount + getUnit(response.unit));
+            for (var el in response.nutrition) {
+                var nutri = response.nutrition[el];
+                $("#table_body").append("<tr>");
+                $("#table_body").append("<td class=nutri-label>" + nutri.name + "</td>");
+                $("#table_body").append("<td>" + nutri.amount + getUnit(nutri.unit) + "</td>");
+                $("#table_body").append("<td>" + nutri.percentOfDailyNeeds + "</td>");
+                $("#table_body").append("</tr>");
+            }
         }
     });
 };
