--- a/NutriApp/Views/ProductInfo/Index.cshtml
+++ b/NutriApp/Views/ProductInfo/Index.cshtml
@@ -33,9 +33,9 @@
       <table id="productInfoTable" border="0">
           <thead>
               <tr>
-                <th class="empty_th_space"></th>
-                <th class="weight_th_info"></th>
-                <th class="percentDaily_th">Percent of daily recommended intake </th>
+                <th class="nutrient_th"></th>
+                <th class="weight_th"></th>
+                <th class="percentDaily_th"></th>
               </tr>
           </thead>
           <tbody id="table_body">
@@ -80,7 +80,9 @@ function CallController(el) {
         complete: function(data) {
             var response = data.responseJSON;
             $("#productContainer").prepend("<h1>" + response.name + "<h1>");
-            $(".weight_th_info").append(response.amount + getUnit(response.unit));
+            $(".nutrient_th").append("Nutrient");
+            $(".percentDaily_th").append("Percent of daily recommended intake");
+            $(".weight_th").append(response.amount + getUnit(response.unit));
             for (var el in response.nutrition) {
                 var nutri = response.nutrition[el];
                 $("#table_body").append("<tr>");
