--- a/NutriApp/wwwroot/css/site.css
+++ b/NutriApp/wwwroot/css/site.css
@@ -1,18 +1,71 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  margin-bottom: 60px;
+    margin: 0;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 300;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+header {
+    background-color: #002043;
+}
+
+header::after{
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.logo{
+    float:left;
+    padding: 10 0;
+}
+
+nav {
+    float:right;
+}
+
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav li{
+    display: inline-block;
+    margin-left: 70px;
+    padding-top: 100px;
+
+    position: relative;
+}
+
+nav a {
+    font-size: 16px;
+    color: #dcac25;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+nav a:hover {
+    color: #e6c465;
+}
+
+nav a::before {
+    content: '';
+    display: block;
+    background-color: #e6c465;
+
+    position: absolute;
+    top: 0;
+    height: 5px;
+    width: 0%;
+
+    transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+    width: 100%;
 }
