--- a/NutriApp/Views/Shared/_Layout.cshtml
+++ b/NutriApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a asp-controller="ProductInfo" asp-action="Index">Products</a></li>
                     <li><a href="#">Recipes</a></li>
-                    <li><a href="#">BMI Calulcator</a></li>
+                    <li><a asp-controller="BMI" asp-action="Index">BMI Calulcator</a></li>
                     <li><a href="#">More</a></li>
                 </ul>
             </nav>
