Added a new property for product

--- a/NutriApp/Views/ProductInfo/Index.cshtml
+++ b/NutriApp/Views/ProductInfo/Index.cshtml
@@ -10,11 +10,11 @@
 }
 <head>
     <link rel="stylesheet" href="~/css/productInfo.css" asp-append-version="true" />
-
 </head>
 
 <div>
-    <h1>Product Info</h1>
+    <h3><b>Product Info</b></h3>
+    <p>Search for products, get to know their nutrition values.</p>
 </div>
 <div class="container-md">
     <div class="queryContainer"> 
